--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/animate.css/animate.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
