--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.4.1",
     "juno-payments": "^1.1.0",
     "ng-gallery": "^5.0.0",
     "ngx-toastr": "^12.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
