--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,10 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/fontawesome.min.css",
               "src/styles.css",
-              "node_modules/animate.css/animate.css",
+              "node_modules/animate.css/animate.compat.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js", 
               "node_modules/bootstrap/dist/js/bootstrap.min.js",  
               "node_modules/popper.js/dist/umd/popper.min.js"
             ]
