--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+    "@types/scriptjs": "0.0.2",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -32,7 +33,6 @@
     "ng-gallery": "^5.0.0",
     "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.1",
-    "react-native-juno-rn-card-hash": "^1.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
