--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "@angular/router": "~9.1.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
-    "@types/scriptjs": "0.0.2",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.4.1",
+    "juno-nodejs": "^1.0.14",
     "ng-gallery": "^5.0.0",
+    "ngx-payment-card": "^1.0.1",
     "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.1",
+    "react-credit-cards": "^0.8.3",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
