--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "juno-nodejs": "^1.0.14",
     "ng-gallery": "^5.0.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-credit-cards": "^1.0.9",
     "ngx-payment-card": "^1.0.1",
     "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.1",
