--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.4.1",
     "juno-nodejs": "^1.0.14",
     "ng-gallery": "^5.0.0",
+    "ngx-avatar": "^4.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-payment-card": "^1.0.1",
     "ngx-toastr": "^12.0.1",
